# py-scorm

./: MANIFEST.in  README.md  requirements.txt  setup.cfg  setup.py
.github/workflows/: package.yaml
py_scorm/: __init__.py  scorm_12.py  test.py
py_scorm/cli/: __init__.py  pyscorm.py
py_scorm/data/scorm_12/: ims_xml.xsd  imsmanifest.xml  scorm.js
