[metadata]
name = py_scorm
version = 0.1.2
description = A python package for generating scorm courses
long_description = file: README.md
url = https://www.smart-study.at
author = Philipp Hafner
author_email = philipp.hafner@smart-study.at
license = None
classifiers =
    Environment :: Web Environment
    Programming Language :: Python :: 3 :: Only
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
python_requires = >=3.9